<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hangman</string>
    <string name="help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="play">Play</string>
    <string name="ok">OK</string>
    <string name="rules">Rules</string>
    <string name="bgimage">This is a background image.</string>
    <string name="gallows">The Gallows</string>
	<string name="head">Head</string>
	<string name="body">Body</string>
	<string name="arm">Arm</string>
	<string name="leg">Leg</string>
	<string name="norbutton">Norwegian</string>
	<string name="ukbutton">English</string>
	<string name="congratz">Congratulation</string>
	<string name="win">You win</string>
	<string name="wins">Wins:</string>
	<string name="losses">Losses:</string>
	<string name="answer">The answer was:</string>
	<string name="playagain">Play again</string>
	<string name="exit">Exit</string>
	<string name="sorry">I\'m sorry</string>
	<string name="lose">You lose this time, but theres always next game!</string>	
	<string name="theanswer">The answer was:</string>
	<string name="helptext">Guess the word by selecting the letters.</string>
	<string name="helptext2">"You only have 6 wrong guesses then your adventure ends in tragedy.</string>
</resources>
