<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/bgimage"
        android:src="@drawable/backgroundportrait" />

    <Button
        android:id="@+id/settingsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playBtn"
        android:layout_centerHorizontal="true"
        android:minWidth="100dip"
        android:text="@string/rules"
        android:textColor="#FFFF0000" />

    <Button
        android:id="@+id/playBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        android:minWidth="100dip"
        android:text="@string/play"
        android:textColor="#FFFF0000" />

    <ImageButton
        android:id="@+id/norbutton"
        android:contentDescription="@string/norbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/settingsBtn"
        android:layout_marginBottom="20dp"
        android:src="@drawable/no" />

     <ImageButton
         android:id="@+id/ukbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/norbutton"
         android:layout_toRightOf="@+id/norbutton"
         android:contentDescription="@string/ukbutton"
         android:src="@drawable/uk" />
        
</RelativeLayout>